<resources>
    <string name="app_name">Synchrony Cat App</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="common_string_ok">OK</string>
    <string name="common_error_title">Error</string>
    <string name="common_error_no_internet">There is no internet connectivity, Please connect to internet or try again later.</string>
    <string name="common_error_server_error">Server not responding at this moment, please try again later.</string>
    <string name="common_string_cancel">Cancel</string>
    <string name="common_string_update">Update</string>
    <string name="common_error_message">Please try again later.</string>
    <string name="profile_create_profile_label">Create your profile</string>
    <string name="profile_edit_profile_label">Edit your profile</string>
    <string name="profile_first_name_label">First Name</string>
    <string name="profile_last_name_label">Last Name</string>
    <string name="profile_last_email_label">Email</string>
    <string name="profile_last_phone_label">Phone</string>
    <string name="profile_education_label">Education</string>
    <string name="profile_work_label">Work Experience</string>
    <string name="profile_about_label">About me</string>
    <string name="profile_common_label_cancel">Cancel</string>
    <string name="profile_common_label_save">Save</string>
    <string name="profile_pic_dialog_button">Gallery</string>
    <string name="profile_pic_dialog_title">Choose Image</string>
    <string name="profile_first_name_empty_error">Please enter first name.</string>
    <string name="profile_last_name_empty_error">Please enter last name.</string>
    <string name="profile_email_empty_error">Please enter email address.</string>
    <string name="profile_phone_empty_error">Please enter phone number.</string>
    <string name="profile_about_empty_error">Please enter about you.</string>
    <string name="profile_education_empty_error">Please enter your education.</string>
    <string name="profile_work_empty_error">Please enter about your work experience.</string>
    <string name="cat_detail_description_label">Description</string>
    <string name="cat_detail_characteristics_label">Characteristics</string>
    <string name="cat_detail_Child_Friendly_label">Child Friendly</string>
    <string name="cat_detail_Adaptability_label">Adaptability</string>
    <string name="cat_detail_Affection_label">Affection Level</string>
    <string name="cat_detail_Dog_Friendly_label">Dog Friendly</string>
    <string name="cat_detail_Temprament_label">Temprament</string>
    <string name="cat_detail_Weight_label">Weight</string>
    <string name="profile_pic_dialog_message">Please select your profile picture.</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_name">Name: %1$s %2$s</string>
    <string name="nav_email">Email: %1$s</string>
    <string name="nav_phone">Phone: %1$s</string>
    <string name="nav_education">Education: %1$s</string>
    <string name="nav_work">Work: %1$s</string>
    <string name="nav_about">About: %1$s</string>
    <string name="profile_pic_instruction">Click on camera icon to select your photo.</string>
    <string name="cat_list_origin">Origin: %1$s</string>

</resources>