<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateProfileActivity">


    <TextView android:id="@+id/titleLabel"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_create_profile_label"
        android:textSize="@dimen/heading_22sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/purple_200" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        android:paddingBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/imagePickerCard"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:cardElevation = "16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="45dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_centerHorizontal="true">
        <ImageView  android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width = "match_parent"
            android:layout_height = "match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_camera"
            android:scaleType="centerCrop"/>
   </androidx.cardview.widget.CardView>

    <TextView android:id="@+id/lablePickImage"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_pic_instruction"
        android:textSize="@dimen/small_12sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/imagePickerCard"
        android:layout_marginTop="@dimen/margin_05dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/gray_mid"/>

    <TextView android:id="@+id/labelFName"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/lablePickImage"
        android:layout_marginStart="@dimen/margin_20dp"
        android:paddingTop="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFName"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        />
    <TextView android:id="@+id/errorFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name_empty_error"
        android:textSize="@dimen/small_12sp"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName"
        android:layout_marginTop="@dimen/margin_05dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:textColor="@color/red"/>

    <TextView android:id="@+id/labelLName"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_name_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorFirstName"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_05dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/labelLName"
        />
        <TextView android:id="@+id/errorLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_last_name_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputLastName"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

    <TextView android:id="@+id/labelEmail"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_email_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorLastName"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="50"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_05dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        />

        <TextView android:id="@+id/errorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

    <TextView android:id="@+id/labelPhone"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_phone_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorEmail"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="@dimen/margin_10dp"
        android:maxLength="10"
        android:digits="0123456789"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_05dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/labelPhone"
        />

        <TextView android:id="@+id/errorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputPhone"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

        <TextView android:id="@+id/labelEducation"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_education_label"
            android:textSize="@dimen/medium_16sp"
            app:layout_constraintTop_toBottomOf="@id/errorPhone"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray_mid" />

        <EditText android:id="@+id/inputEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_10dp"
            android:maxLength="50"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_05dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_05dp"
            android:background="@drawable/input_text_bg"
            app:layout_constraintTop_toBottomOf="@id/labelEducation"
            />
        <TextView android:id="@+id/errorEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_about_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputEducation"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

        <TextView android:id="@+id/labelWork"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_work_label"
            android:textSize="@dimen/medium_16sp"
            app:layout_constraintTop_toBottomOf="@id/errorEducation"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/gray_mid" />

        <EditText android:id="@+id/inputWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/margin_10dp"
            android:maxLength="50"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_16sp"
            android:layout_marginTop="@dimen/margin_05dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_05dp"
            android:background="@drawable/input_text_bg"
            app:layout_constraintTop_toBottomOf="@id/labelWork"
            />
        <TextView android:id="@+id/errorWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_work_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputWork"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

    <TextView android:id="@+id/labelAboutName"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_about_label"
        android:textSize="@dimen/medium_16sp"
        app:layout_constraintTop_toBottomOf="@id/errorWork"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gray_mid" />

    <EditText android:id="@+id/inputAbout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/margin_10dp"
        android:maxLength="500"
        android:gravity="top|start"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_16sp"
        android:layout_marginTop="@dimen/margin_05dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_05dp"
        android:background="@drawable/input_text_bg"
        app:layout_constraintTop_toBottomOf="@id/labelAboutName"
        />
        <TextView android:id="@+id/errorAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_about_empty_error"
            android:textSize="@dimen/small_12sp"
            app:layout_constraintTop_toBottomOf="@id/inputAbout"
            android:layout_marginTop="@dimen/margin_05dp"
            android:layout_marginBottom="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textColor="@color/red"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile_common_label_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_16sp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/errorAbout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/profile_common_label_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:textSize="@dimen/medium_16sp"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar_cyclic"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>